--- a/index.html
+++ b/index.html
@@ -3002,16 +3002,16 @@ function saveToCSV() {
         const csvContent = [
             headers.join(','),
             ...rows.map(row => 
-                row.map(v => {
+                row.map((v, index) => {
                     const str = String(v || '');
                     
                     // 電話番号の場合は先頭に'を付けてExcelで文字列として認識させる
-                    if (row === values && headers[row.indexOf(v)] === '電話番号' && str !== '') {
+                    if (headers[index] === '電話番号' && str !== '') {
                         return `"'${str}"`;
                     }
                     
                     // 数値の場合はそのまま、文字列の場合は必要に応じてクォート
-                    if (!isNaN(str) && str !== '' && headers[row.indexOf(v)] !== '電話番号') {
+                    if (!isNaN(str) && str !== '' && headers[index] !== '電話番号') {
                         return str;
                     }
                     // カンマ、改行、ダブルクォートを含む場合はクォートで囲む
